styles/styles.css
/* ... */
body .container .contact .contactHead {
  border: 1px white solid;
  padding: 1rem;
  margin-bottom: 1rem;
}

body .container .contact .media {
  margin-top: 2rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
}

body .container .contact .media a img {
  width: 1.5rem;
  height: 1.5rem;
}

@media only screen and (min-width: 1200px) {
  body .container .homepage .topBar {
    position: relative;
  }
  body .container .homepage .topBar .desktopNav {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    padding: 1rem 3rem;
  }
  body .container .homepage .topBar .desktopNav ul {
    -ms-flex-item-align: start;
        align-self: flex-start;
    margin-left: auto;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    gap: 2rem;
  }
  body .container .homepage .topBar .desktopNav ul li a {
    font-size: 1.2rem;
    position: relative;
  }
  body .container .homepage .topBar .desktopNav ul li a::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 1px;
    background-color: white;
    -webkit-transform: scaleX(0);
            transform: scaleX(0);
    -webkit-transition: -webkit-transform 400ms ease-in-out;
    transition: -webkit-transform 400ms ease-in-out;
    transition: transform 400ms ease-in-out;
    transition: transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out;
  }
  body .container .homepage .topBar .desktopNav ul li a:hover::after {
    -webkit-transform: scaleX(1);
            transform: scaleX(1);
  }
  body .container .homepage .topBar .mobileNav {
    display: none;
  }
  body .container .homepage .topBar .mobileMenu {
    display: none;
  }
  body .container .homepage .nameContainer {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  body .container .homepage .nameContainer .name {
    text-align: center;
  }
  body .container .about {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    padding: 2rem 5rem;
    gap: 3rem;
  }
  body .container .about .aboutCont {
    width: 50%;
  }
  body .container .about .aboutCont .aboutPara {
    font-size: 1.8rem;
  }
  body .container .about .aboutCont .flower {
    display: block;
    margin: auto;
  }
  body .container .about .divider {
    display: block;
  }
  body .container .about .skillsCont {
    width: 50%;
  }
  body .container .about .skillsCont .skills .skill {
    font-size: 1.4rem;
  }
  body .container .experience #experience {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    gap: 4rem;
  }
  body .container .experience #experience .exper {
    width: 50%;
  }
  body .container .experience #experience .exper .Head {
    font-size: 1.5rem;
  }
  body .container .experience #experience .exper .About {
    line-height: 2.5rem;
    font-size: 1.2rem;
  }
  body .container .projects .allProjects .project {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: 100%;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    gap: 1rem;
  }
  body .container .projects .allProjects .project .imageContainer {
    max-width: 30rem;
    height: 15rem;
  }
  body .container .projects .allProjects .project .info {
    height: 100%;
    max-width: 30rem;
  }
  body .container .projects .allProjects .project .info .projectName {
    font-size: 2.5rem;
  }
  body .container .projects .allProjects .project .info .aboutProject {
    font-size: 1.2rem;
    width: 30rem;
  }
  body .container .projects .allProjects .project .lower {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    width: 100%;
    padding: 1rem;
    gap: 1rem;
  }
  body .container .projects .allProjects .project .lower .techHead {
    font-size: 1.2rem;
  }
  body .container .projects .allProjects .project .lower .projectLinks {
    margin-top: 1rem;
    padding: .5rem;
  }
  body .container .contact p {
    font-size: 1.5rem;
  }
  body .container .contact .media {
    gap: 2rem;
  }
}
/*# sourceMappingURL=styles.css.map */

